updating break_action.yml

--- a/.github/workflows/break_action.yml
+++ b/.github/workflows/break_action.yml
@@ -8,9 +8,10 @@ on:
 jobs:
     build:
      runs-on: ubuntu-latest
-     strategy:
-      matrix:
-        package: [client, server]
+#      strategy:
+#       matrix:
+     env:
+          PACKAGE_LOCATION: client, server
      steps:
       - name: Checkout repo
         uses: actions/checkout@v2
