--- a/.github/workflows/break_action.yml
+++ b/.github/workflows/break_action.yml
@@ -8,10 +8,9 @@ on:
 jobs:
     build:
      runs-on: ubuntu-latest
-#      strategy:
-#       matrix:
-     env:
-          PACKAGE_LOCATION: client, server
+     strategy:
+      matrix:
+        PACKAGE_LOCATION: [client, server]
      steps:
       - name: Checkout repo
         uses: actions/checkout@v2
