--- a/.github/workflows/break_action.yml
+++ b/.github/workflows/break_action.yml
@@ -1,17 +1,18 @@
+
+
 name: node_js
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
-    build:
-     runs-on: ubuntu-latest
-     strategy:
-      matrix:
-        PACKAGE_LOCATION: [client, server]
-     steps:
+  client:       
+    runs-on: ubuntu-latest
+    env:
+      PACKAGE_LOCATION: client
+    steps:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -27,4 +28,22 @@ jobs:
           npm run lint
           npm run build
           npm run test
- 
+  server:      
+    runs-on: ubuntu-latest
+    env:
+      PACKAGE_LOCATION: server
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+           node-version: lts/*
+      - name: Build
+        run: |
+          cd $PACKAGE_LOCATION
+          npm ci
+          npm run format
+          npm run lint
+          npm run build
+          npm run test   
