--- a/.github/workflows/break_action.yml
+++ b/.github/workflows/break_action.yml
@@ -28,8 +28,8 @@ jobs:
           npm run test
   server:      
     runs-on: ubuntu-latest
-    env:
-      PACKAGE_LOCATION: server
+#     env:
+#       PACKAGE_LOCATION: server
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
