--- a/.github/workflows/break_action.yml
+++ b/.github/workflows/break_action.yml
@@ -8,8 +8,8 @@ on:
 jobs:
   client:       
     runs-on: ubuntu-latest
-#     env:
-#       PACKAGE_LOCATION: client
+    env:
+      PACKAGE_LOCATION: client
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
